--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@starling-tech/react-native-video-player",
-  "version": "0.11.2",
+  "version": "0.11.3",
   "description": "A video player for React Native with controls",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "react": "*",
     "react-native": "*",
     "react-native-vector-icons": ">= 2.1.0",
-    "react-native-video": "^2.0.0"
+    "@starling-tech/react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^3.4.0",
